fix talk to me button on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -154,12 +154,26 @@ strong {
   font-weight: 700;
 }
 
-.cta {
-  padding-top: 20px;
-  text-align: center;
-}
 .cta-button {
   width: 40%;
+}
+
+#cta {
+  padding-top: 20px;
+  text-align: center;
+  display: block;
+  @media (max-width: $screen-sm) {
+    display: none;
+  }
+}
+
+#cta-mobile {
+  padding-top: 20px;
+  text-align: center;
+  display: none;
+  @media (max-width: $screen-sm) {
+    display: block;
+  }
 }
 
 #services, #team, #about {
